IGNITE-20409 Refactor Ignition#init to accept nodeName directly
- Modified org.apache.ignite.Ignition#init to take `destinationNodeName` as a direct parameter instead of inside `InitParameters`.
- Removed `destinationNodeName` field from `InitParameters`.
- Updated relevant tests to reflect these changes.